--- a/css/project.css
+++ b/css/project.css
@@ -52,6 +52,8 @@ header{
     color: black;
     display: grid;
     grid-template-rows: 150px 100px;
+    background-image: url("/download.jpg");
+    background-size: cover;
     
     
 }
