--- a/css/project.css
+++ b/css/project.css
@@ -54,7 +54,7 @@ header{
     color: black;
     display: grid;
     grid-template-rows: 150px 100px;
-    background-image: url("/download.jpg");
+    background-image: url(download.jpg);
     background-size: cover;
     
     
@@ -233,6 +233,12 @@ footer{
         
         
     }
+    .mainnav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+    }
     
     
     
@@ -258,7 +264,7 @@ footer{
 @media (min-width: 600px) and (max-width:999px){
     .mast {
         width: 100%;
-                 background-image: url("/img/download.jpg");
+                 background-image: url("/download.jpg");
         background-repeat: no-repeat;
         background-position: center;
           background-size: cover;
